src/main/resources/kubernetes/deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: game-data
  labels:
    app: game-data
spec:
  type: NodePort
  selector:
    app: game-data
  ports:
  - name: http
    port: 7777
    nodePort: 7777
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: game-data
  labels:
    app: game-data
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: game-data
        tier: backend
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: game-data
        image: sensedia_bet/game_data:1.0
        ports:
        - name: http
          containerPort: 7777
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: http
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: http
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
