src/main/resources/kubernetes/world-cup-gateway.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wc-gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /.*
        backend:
          serviceName: game-data
          servicePort: 7777
---
